--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "jp.co.jchankchan.clockinout"
+        applicationId "jp.co.jchankchan.myplayground"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
