--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -36,3 +36,17 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+def repo = new File(rootDir, "repository")
+apply plugin: 'maven'
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository url: "file://${repo.absolutePath}"
+            pom.version = '0.0.1'
+            pom.groupId = 'jp.co.jchankchan'
+            pom.artifactId = 'playground-android-library'
+        }
+    }
+}
