--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-
+    api 'com.google.android.gms:play-services-ads:19.6.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.13.1'
@@ -45,7 +45,7 @@ publishing {
         maven(MavenPublication) {
             groupId 'jp.co.jchankchan'
             artifactId 'playground-android-library'
-            version '0.0.1'
+            version '0.0.2'
             artifact "$buildDir/outputs/aar/mylibrary-release.aar"
             pom.withXml {
                 def dependenciesNode = asNode().appendNode('dependencies')
@@ -68,17 +68,3 @@ publishing {
         }
     }
 }
-/*
-apply plugin: 'maven'
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository url: "file://${repo.absolutePath}"
-            pom.version = '0.0.1'
-            pom.groupId = 'jp.co.jchankchan'
-            pom.artifactId = 'playground-android-library'
-        }
-    }
-}
-*/
