--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -32,12 +32,43 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
 
 def repo = new File(rootDir, "docs")
+apply plugin: 'maven-publish'
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId 'jp.co.jchankchan'
+            artifactId 'playground-android-library'
+            version '0.0.1'
+            artifact "$buildDir/outputs/aar/mylibrary-release.aar"
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+
+                configurations.implementation.allDependencies.each {
+                    if (it.name != 'unspecified') {
+                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                        dependencyNode.appendNode('groupId', it.group)
+                        dependencyNode.appendNode('artifactId', it.name)
+                        dependencyNode.appendNode('version', it.version)
+                        //TODO: これ要らないかも知れない -> dependencyNode.appendNode('scope', 'runtime')
+                    }
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            url = uri("file://${repo.absolutePath}")
+        }
+    }
+}
+/*
 apply plugin: 'maven'
 
 uploadArchives {
@@ -50,3 +81,4 @@ uploadArchives {
         }
     }
 }
+*/
