--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-    api 'com.google.android.gms:play-services-ads:19.6.0'
+    api 'com.google.android.gms:play-services-ads:19.7.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.13.1'
@@ -45,18 +45,18 @@ publishing {
         maven(MavenPublication) {
             groupId 'jp.co.jchankchan'
             artifactId 'playground-android-library'
-            version '0.0.2'
+            version '0.0.3'
             artifact "$buildDir/outputs/aar/mylibrary-release.aar"
             pom.withXml {
                 def dependenciesNode = asNode().appendNode('dependencies')
-
                 configurations.implementation.allDependencies.each {
                     if (it.name != 'unspecified') {
-                        def dependencyNode = dependenciesNode.appendNode('dependency')
-                        dependencyNode.appendNode('groupId', it.group)
-                        dependencyNode.appendNode('artifactId', it.name)
-                        dependencyNode.appendNode('version', it.version)
-                        //TODO: これ要らないかも知れない -> dependencyNode.appendNode('scope', 'runtime')
+                        appendDependency(dependenciesNode, it.group, it.name, it.version, 'runtime')
+                    }
+                }
+                configurations.api.allDependencies.each {
+                    if (it.name != 'unspecified') {
+                        appendDependency(dependenciesNode, it.group, it.name, it.version, 'compile')
                     }
                 }
             }
@@ -67,4 +67,12 @@ publishing {
             url = uri("file://${repo.absolutePath}")
         }
     }
+}
+
+static def appendDependency(parentNode, groupId, artifactId, version, scope) {
+    def node = parentNode.appendNode("dependency")
+    node.appendNode("groupId", groupId)
+    node.appendNode("artifactId", artifactId)
+    node.appendNode("version", version)
+    node.appendNode("scope", scope)
 }
